1999-05-14  Tim Jenness  <timj@jach.hawaii.edu>

	* src/surf_scuphot.f: Add status checking to SCULIB_COADD 

	* sculib/sculib_coadd.f (SCULIB_COADD): Add status checking

	* sculib/sculib_coadd_maps.f (SCULIB_COADD_MAPS): Actually check
	the status on entry.

	* surf_scuphot.f: Initalise MAP_N_PTR

	* sculib_analyse_photom_jiggle.f: Check status before fitting parabola.

1999-05-13  Tim Jenness  <timj@jach.hawaii.edu>

	* src/surf_scuphot.f: Iterate over measurements as well as ints

	* src/surf_write_photom_header.f (SURF_WRITE_PHOTOM_HEADER):
	Remove 4 arguments that were not being used.

	* src/surf_*: Check for POLPHOT whenever check for PHOTOM obs mode.

	* starlink/makefile: Add -DPKG_VERS and
	surf_set_app_name/surflib_trim_image

	* makefile: Add polimp.scuba

	* src/surf_read_rebin_ndf.f (SURF_READ_REBIN_NDF): Check for
	POLMAP and POLPHOT modes

	* src/surf_*: Check history using (:LEN) rather than just equality 
	(important when version number is present)

	* src/surf_mon.f (SURF_MON): Use surf_set_app_name to set
	application name for history recording.

	* src/surf_set_app_name.F (SURF_SET_APP_NAME): Created.

1999-05-12  Tim Jenness  <timj@jach.hawaii.edu>

	* src/surf_remip.f (SURF_REMIP): The FAST_AXIS information was
	being written before the REDS extension was opened...
	(SURF_REMIP): Remove unused variable declarations. Check for
	APPLICATION name in history by only comparing first few characters.

	* src/surf_reduce_switch.f: Use NDF_XSTAT to look for extension

	* misc/ipfile.dat: Add F12/F13 so that REMIP will work before
	EXTINCTION.

1999-05-11  Tim Jenness  <timj@jach.hawaii.edu>

	* src/surf_remsky.f (SURF_REMSKY): Propogate UNITS

	* src/surf_scuba2mem.f (SURF_SCUBA2MEM): Propogate UNITS

	* src/surf_write_map_info.F (SURF_WRITE_MAP_INFO): Write FITS
	header minus AST FITS keywords

1999-05-07  Tim Jenness  <timj@jach.hawaii.edu>

	* surflib/surflib_fill_polpack_angles.f